# Game-Classification-App

./: README.md
backend/: CMakeLists.txt  Dockerfile  Game.hpp  Server.cpp  Server.hpp  docker-compose.yml  main.cpp
backend/controllers/: AuditController.cpp  AuditController.hpp  CatalogController.cpp  CatalogController.hpp  GameController.cpp  GameController.hpp  ReportController.cpp  ReportController.hpp  UserController.cpp  UserController.hpp
backend/include/: Server.hpp
backend/interfaces/: IAuditRepository.hpp  ICatalogRepository.hpp  IGameRepository.hpp  IReportRepository.hpp  IUserRepository.hpp
backend/models/: AuditLog.hpp  Comment.hpp  Developer.hpp  Game.hpp  GamePremier.hpp  Platform.hpp  Ticket.hpp  User.hpp
backend/repositories/: MongoAuditRepository.cpp  MongoAuditRepository.hpp  MongoCatalogRepository.cpp  MongoCatalogRepository.hpp  MongoGameRepository.cpp  MongoGameRepository.hpp  MongoReportsRepository.cpp  MongoReportsRepository.hpp  MongoUserRepository.cpp  MongoUserRepository.hpp
backend/services/: AuditService.cpp  AuditService.hpp  CatalogService.cpp  CatalogService.hpp  GameService.cpp  GameService.hpp  ReportService.cpp  ReportService.hpp  UserService.cpp  UserService.hpp
backend/src/: Server.cpp  main.cpp
frontend/: AdminDashboard.qml  CMakeLists.txt  GamesDashboard.qml  Main.qml  imageuploader.cpp  imageuploader.h  main.cpp
